--- a/index.html
+++ b/index.html
@@ -434,9 +434,9 @@
             <p><em>PT Digiclass Indonesia</em></p>
             <p>
             <ul>
-              <li>Manage Akun Web Social Media</li>
-              <li>Mempromosikan Produk di Social Media</li>
-              <li>Membuat Produk berada di posisi teratas dalam pencaharian internet</li>
+              <li>Manage Social Media Web Accounts With Laravel Framework</li>
+              <li>Promoting Products on Social Media With Laravel Framework</li>
+              <li>Make Products in the top position in internet search With Laravel Framework</li>
             </ul>
             </p>
           </div>
@@ -446,9 +446,9 @@
             <p><em>Pelatihan PT Nidha Cipta E. , Magang di PT Kamiko</em></p>
             <p>
             <ul>
-              <li>Develop Company Profile Customer</li>
-              <li>Develop Web Dosen Profile</li>
-              <li>Develop Web Koperasi Perusahaan</li>
+              <li>Develop Company Profile Customer With Laravel Framework</li>
+              <li>Web Development Lecturer Profile With Laravel Framework</li>
+              <li>Company Cooperative Web Development With Laravel Framework</li>
             </ul>
             </p>
           </div>
@@ -458,7 +458,7 @@
             <p><em>PT Kamiko Cipta Solusi</em></p>
             <p>
             <ul>
-              <li>Develop ERP Perusahaan</li>
+              <li>Develop ERP Company With Laravel Framework</li>
             </ul>
             </p>
           </div>
