--- a/index.html
+++ b/index.html
@@ -557,7 +557,7 @@
           <div class="portfolio-wrap">
             <img src="assets/img/masker.png" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <p>Monioring Satuan Kerja</p>
+              <p>Work Unit Monitoring</p>
               <div class="portfolio-links">
                 <a href="assets/img/masker.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Monioring Satuan Kerja"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
