--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -74,12 +74,11 @@
             <ul>
               <li><strong>Category</strong>: Web Aplication</li>
               <li><strong>Client</strong>: Kementrian Perhubungan Direktorat Jenderal Perhubungan Laut Distrik Navigasi Kelas | Tanjung Priok </li>
-              <li><strong>Project date</strong>: 01 March, 2020</li>
               <li><strong>Project URL</strong>: <a href="#">http://masker.disnavpriok.id/login</a></li>
             </ul>
 
             <p>
-              Aplikasi Monitoring Satuan Kerja Berbasis Web     
+              Web-Based Work Unit Monitoring Application     
             </p>
           </div>
 
