--- a/index.html
+++ b/index.html
@@ -434,9 +434,9 @@
             <p><em>PT Digiclass Indonesia</em></p>
             <p>
             <ul>
-              <li>Manage Social Media Web Accounts With Laravel Framework</li>
-              <li>Promoting Products on Social Media With Laravel Framework</li>
-              <li>Make Products in the top position in internet search With Laravel Framework</li>
+              <li>Manage Social Media Web Accounts </li>
+              <li>Promoting Products on Social Media </li>
+              <li>Make Products in the top position in internet search </li>
             </ul>
             </p>
           </div>
