--- a/index.html
+++ b/index.html
@@ -443,7 +443,7 @@
           <div class="resume-item">
             <h4>Magang Web developer</h4>
             <h5>11 Oktober 2021 - 11 April 2022</h5>
-            <p><em>Pelatihan PT Nidha Cipta E. , Magang di PT Kamiko</em></p>
+            <p><em>Pelatihan PT Nidha Cipta E. , Magang di PT Kamiko Cipta Solusi</em></p>
             <p>
             <ul>
               <li>Develop Company Profile Customer With Laravel Framework</li>
