--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <!-- Favicons -->
   <link href="" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -56,7 +56,6 @@
         <!-- <a href="#" class="twitter"><i class="bi bi-twitter"></i></a> -->
         <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
         <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-        <!-- <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a> -->
       </div>
 
     </div>
@@ -302,7 +301,56 @@
         </div> -->
       </div>
 
-    </div><!-- End Interests -->
+    </div>
+    
+    <div class="interests container">
+
+      <div class="section-title">
+        <h2>Certificates</h2>
+      </div>
+
+      <div class="row">
+        <div class="col-lg-3 col-md-4">
+          <div class="icon-box">
+          <img src="assets/img/sertifikat/cert-1014-24042746.jpg" class="" style="height: auto; max-width:100% " alt="">
+            <!-- <i class="fas fa-check" style="color: #ffbb2c;"></i> -->
+            <!-- <h3>&nbsp;&nbsp;&nbsp;HTML</h3> -->
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
+          <div class="icon-box">
+            <img src="assets/img/sertifikat/cert-1023-24042746.jpg" class="" style="height: auto; max-width:100% " alt="">
+            <!-- <h3>&nbsp;&nbsp;&nbsp;CSS</h3> -->
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
+          <div class="icon-box">
+            <img src="assets/img/sertifikat/cert-1082-24042746.jpg" class="" style="height: auto; max-width:100% " alt="">
+            <!-- <h3>&nbsp;&nbsp;&nbsp;Javascript</h3> -->
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-4 mt-4 mt-lg-0">
+          <div class="icon-box">
+            <img src="assets/img/sertifikat/cert-1097-24042746.jpg" class="" style="height: auto; max-width:100% " alt="">
+            <!-- <h3>&nbsp;&nbsp;&nbsp;PHP</h3> -->
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-4 mt-4">
+          <div class="icon-box">
+            <img src="assets/img/sertifikat/cert-1162-24042746.jpg" class="" style="height: auto; max-width:100% " alt="">
+            <!-- <h3>&nbsp;&nbsp;&nbsp;Laravel</h3> -->
+          </div>
+        </div>
+        <div class="col-lg-3 col-md-4 mt-4">
+          <div class="icon-box">
+            <img src="assets/img/sertifikat/Screenshot (373).png" class="" style="height: auto; max-width:100% " alt="">
+            <!-- <h3>&nbsp;&nbsp;&nbsp;Laravel</h3> -->
+          </div>
+        </div>
+      </div>
+
+    </div>
+    <!-- End Interests -->
 
     <!-- ======= Testimonials ======= -->
     <!-- <div class="testimonials container">
