--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -74,7 +74,7 @@
             <ul>
               <li><strong>Category</strong>: Web Aplication</li>
               <li><strong>Client</strong>: Kementrian Perhubungan Direktorat Jenderal Perhubungan Laut Distrik Navigasi Kelas | Tanjung Priok </li>
-              <li><strong>Project URL</strong>: <a href="http://masker.disnavpriok.id/login">http://masker.disnavpriok.id/login</a></li>
+              <li><strong>Project URL</strong>: <a href="https://github.com/dhani2610/masker-app">https://github.com/dhani2610/masker-app</a></li>
             </ul>
 
             <p>
