--- a/index.html
+++ b/index.html
@@ -79,11 +79,7 @@
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
           <h3>Web Developer</h3>
           <p class="fst-italic">
-            Andaka Ramdhani Santoso, I
-            is a web developer
-            beginners who like to explore things
-            things about IT world especially
-            Web Developer
+            Andaka Ramdhani Santoso, I am a novice web developer who likes to explore things around the IT world, especially Web Developers, and I can also work carefully and can work under pressure such as deadlines.
           </p>
           <div class="row">
             <div class="col-lg-6">
