--- a/index.html
+++ b/index.html
@@ -599,11 +599,11 @@
 
         <div class="col-lg-4 col-md-6 portfolio-item filter-app">
           <div class="portfolio-wrap">
-            <img src="assets/img/masker.png" class="img-fluid" alt="">
+            <img src="assets/img/Screenshot (490).png" class="img-fluid" alt="">
             <div class="portfolio-info">
               <p>Work Unit Monitoring</p>
               <div class="portfolio-links">
-                <a href="assets/img/masker.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Monioring Satuan Kerja"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/Screenshot (490).png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Monioring Satuan Kerja"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
