--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -52,11 +52,11 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/masker.png" alt="" style="width: 740px!important">
+                  <img src="assets/img/Screenshot (492).png" alt="" style="width: 740px!important">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/masker2.png" alt="" style="width: 740px!important">
+                  <img src="assets/img/Screenshot (490).png" alt="" style="width: 740px!important">
                 </div>
 
                 <!-- <div class="swiper-slide">
