--- a/index.html
+++ b/index.html
@@ -610,6 +610,45 @@
           </div>
         </div>
 
+        <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+          <div class="portfolio-wrap">
+            <img src="assets/img/projectONOFF.jpeg" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <p>Project ON OF Fitur</p>
+              <div class="portfolio-links">
+                <a href="assets/img/projectONOFF.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Project ON OF Fitur"><i class="bx bx-plus"></i></a>
+                <a href="portfolio-details-onoff.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+          <div class="portfolio-wrap">
+            <img src="assets/img/Screenshot (712).png" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <p>Project Fitur Approval Library</p>
+              <div class="portfolio-links">
+                <a href="assets/img/Screenshot (712).png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Project Fitur Approval Library"><i class="bx bx-plus"></i></a>
+                <a href="portfolio-details-approval.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+          <div class="portfolio-wrap">
+            <img src="assets/img/Screenshot (709).png" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <p>Backend Website Development Services</p>
+              <div class="portfolio-links">
+                <a href="assets/img/Screenshot (709).png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Backend Website Development Services"><i class="bx bx-plus"></i></a>
+                <a href="portfolio-details-backend-jasa.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+
         <!-- <div class="col-lg-4 col-md-6 portfolio-item filter-web">
           <div class="portfolio-wrap">
             <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
