--- a/portfolio-details-backend-jasa.html
+++ b/portfolio-details-backend-jasa.html
@@ -52,8 +52,17 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/projectONOFF.jpeg" alt="" style="width: 740px!important">
+                  <img src="assets/img/Screenshot (708).png" alt="" style="width: 740px!important">
                 </div>
+
+                <div class="swiper-slide">
+                  <img src="assets/img/Screenshot (709).png" alt="" style="width: 740px!important">
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="assets/img/Screenshot (710).png" alt="" style="width: 740px!important">
+                </div>
+
                 <!-- <div class="swiper-slide">
                   <img src="assets/img/portfolio/portfolio-details-3.jpg" alt="">
                 </div> -->
@@ -68,12 +77,12 @@
             <h3>Project information</h3>
             <ul>
               <li><strong>Category</strong>: Web Aplication</li>
-              <li><strong>Client</strong>: Kementrian Perhubungan Direktorat Jenderal Perhubungan Laut Distrik Navigasi Kelas | Tanjung Priok </li>
-              <li><strong>Project URL</strong>: <a href="https://github.com/dhani2610/masker-app">https://github.com/dhani2610/masker-app</a></li>
+              <li><strong>Client</strong>: Fino </li>
+              <li><strong>Project URL</strong>: <a href="https://github.com/dhani2610/project-backend-service-development">https://github.com/dhani2610/project-backend-service-development</a></li>
             </ul>
 
             <p>
-              Web-Based Work Unit Monitoring Application Laravel     
+              Create backend features to login and register as well as manage development service orders from customers With Laravel     
             </p>
           </div>
 
@@ -81,7 +90,6 @@
 
       </div>
     </div>
-    
     <!-- End Portfolio Details -->
 
   </main><!-- End #main -->
