--- a/portfolio-details-onoff.html
+++ b/portfolio-details-onoff.html
@@ -54,9 +54,6 @@
                 <div class="swiper-slide">
                   <img src="assets/img/projectONOFF.jpeg" alt="" style="width: 740px!important">
                 </div>
-                <!-- <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-3.jpg" alt="">
-                </div> -->
 
               </div>
               <div class="swiper-pagination"></div>
@@ -68,12 +65,12 @@
             <h3>Project information</h3>
             <ul>
               <li><strong>Category</strong>: Web Aplication</li>
-              <li><strong>Client</strong>: Kementrian Perhubungan Direktorat Jenderal Perhubungan Laut Distrik Navigasi Kelas | Tanjung Priok </li>
-              <li><strong>Project URL</strong>: <a href="https://github.com/dhani2610/masker-app">https://github.com/dhani2610/masker-app</a></li>
+              <li><strong>Client</strong>: Bimo </li>
+              <li><strong>Project URL</strong>: <a href="https://github.com/dhani2610/project-onoff">https://github.com/dhani2610/project-onoff</a></li>
             </ul>
 
             <p>
-              Web-Based Work Unit Monitoring Application Laravel     
+              Making an example of adding the on off feature found on the backend to set the frontend data display with Laravel  
             </p>
           </div>
 
@@ -81,7 +78,6 @@
 
       </div>
     </div>
-    
     <!-- End Portfolio Details -->
 
   </main><!-- End #main -->
